--- a/src/components/MyRents.css
+++ b/src/components/MyRents.css
@@ -53,3 +53,64 @@
   img{
       width: 100%;
   }
+
+.rents-header{
+  background-color: #51e879;
+  width: 100%;
+  height: 5em;
+}
+
+  @media
+only screen 
+and (max-width: 760px), (min-device-width: 768px) 
+and (max-device-width: 1024px)  { 
+
+/* .vehicle-img{
+  width: 30%;
+} */
+
+table, thead, tbody, th, td, tr {
+  display: block;
+}
+
+/* Hide table headers*/
+thead tr {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+tr {
+  margin: 0 0 1rem 0;
+}
+  
+tr:nth-child(odd) {
+  background: #ccc;
+}
+
+td {
+  /* Behave  like a "row" */
+  border: none;
+  border-bottom: 1px solid #eee;
+  position: relative;
+  padding-left: 50%;
+}
+
+td:before {
+  top: 0;
+  left: 6px;
+  width: 45%;
+  white-space: nowrap;
+  float: left;
+}
+
+/*
+Label the data
+*/
+.my-rents-td:nth-of-type(1):before { content: "Picture: "; }
+.my-rents-td:nth-of-type(2):before { content: "Vehicle: "; }
+.my-rents-td:nth-of-type(3):before { content: "Start Date: "; }
+.my-rents-td:nth-of-type(4):before { content: "End Date: "; }
+.my-rents-td:nth-of-type(5):before { content: "Rent Days: "; }
+.my-rents-td:nth-of-type(6):before { content: "Final price: "; }
+}
