--- a/src/components/UsersList.css
+++ b/src/components/UsersList.css
@@ -1,6 +1,14 @@
 .users-table{
+  position: inherit;
     border-collapse: collapse;
     width: 100%;
+   
+}
+
+.user-table-header{
+  background-color: #ddd;
+  width: 100%;
+  height: 5em;
 }
 
 .users-table td, .users-table th {
@@ -26,10 +34,10 @@
   }
 
   .users-container{
-      height: 20em;
+      height: 100%;
       overflow-y: auto;
       border-style: double;
-      margin: 5em;
+      margin: 2em;
   }
 
   .users-container::-webkit-scrollbar-track
@@ -54,3 +62,55 @@
                           #9fd8ef 51%,
                           #2ab0ed 100%);
   }
+
+  @media
+	  only screen 
+    and (max-width: 760px), (min-device-width: 768px) 
+    and (max-device-width: 1024px)  {
+
+		/* Force table to not be like tables anymore */
+		table, thead, tbody, th, td, tr {
+			display: block;
+		}
+
+		/* Hide table headers*/
+		thead tr {
+			position: absolute;
+			top: -9999px;
+			left: -9999px;
+		}
+
+    tr {
+      margin: 0 0 1rem 0;
+    }
+      
+    tr:nth-child(odd) {
+      background: #ccc;
+    }
+    
+		td {
+			/* Behave  like a "row" */
+			border: none;
+			border-bottom: 1px solid #eee;
+			position: relative;
+			padding-left: 50%;
+		}
+
+		td:before {
+			top: 0;
+			left: 6px;
+			width: 45%;
+			white-space: nowrap;
+      float: left;
+		}
+
+		/*
+		Label the data
+		*/
+		.userCell:nth-of-type(1):before { content: "First Name: "; }
+		.userCell:nth-of-type(2):before { content: "Last Name: "; }
+		.userCell:nth-of-type(3):before { content: "Email: "; }
+		.userCell:nth-of-type(4):before { content: "Phone number: "; }
+		.userCell:nth-of-type(5):before { content: "Admin: "; }
+		.userCell:nth-of-type(6):before { content: ""; }
+	}
