--- a/src/components/VehiclesList.css
+++ b/src/components/VehiclesList.css
@@ -8,6 +8,12 @@
     padding: 8px;
   }
   
+  .vehicles-table-header{
+    background-color: #51e879;
+    width: 100%;
+    height: 5em;
+  }
+
 .vehicles-table tr:nth-child(even){background-color: #f2f2f2;}
   
 .vehicles-table tr:hover {background-color: #ddd;}
@@ -26,10 +32,10 @@
   }
 
   .vehicles-container{
-      height: 20em;
+      height: 30em;
       overflow-y: auto;
       border-style: double;
-      margin: 5em;
+      margin: 3em;
   }
 
   .vehicles-container::-webkit-scrollbar-track
@@ -55,6 +61,64 @@
                           #4CAF50 100%);
   }
 
-  img{
-      width: 100%;
-  }
+.vehicle-img{
+  width: 8em;
+}
+
+@media
+only screen 
+and (max-width: 760px), (min-device-width: 768px) 
+and (max-device-width: 1024px)  { 
+
+/* .vehicle-img{
+  width: 30%;
+} */
+
+table, thead, tbody, th, td, tr {
+  display: block;
+}
+
+/* Hide table headers*/
+thead tr {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+tr {
+  margin: 0 0 1rem 0;
+}
+  
+tr:nth-child(odd) {
+  background: #ccc;
+}
+
+td {
+  /* Behave  like a "row" */
+  border: none;
+  border-bottom: 1px solid #eee;
+  position: relative;
+  padding-left: 50%;
+}
+
+td:before {
+  top: 0;
+  left: 6px;
+  width: 45%;
+  white-space: nowrap;
+  float: left;
+}
+
+/*
+Label the data
+*/
+td:nth-of-type(1):before { content: "Picture: "; }
+td:nth-of-type(2):before { content: "Brand: "; }
+td:nth-of-type(3):before { content: "Model: "; }
+td:nth-of-type(4):before { content: "Construction year: "; }
+td:nth-of-type(5):before { content: "Type: "; }
+td:nth-of-type(6):before { content: "Fuel: "; }
+td:nth-of-type(7):before { content: "Number of seats: "; }
+td:nth-of-type(8):before { content: "Price: "; }
+td:nth-of-type(9):before { content: "Count: "; }
+}
