checking car selection

--- a/src/components/MyRents.css
+++ b/src/components/MyRents.css
@@ -50,8 +50,8 @@
                           #4CAF50 100%);
   }
 
-  img{
-      width: 100%;
+  .image-my-rents{
+      width: 10em;
   }
 
 .rents-header{
