--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -5,7 +5,7 @@
     width: 400px;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(0,0,0,.5);
+    background: rgba(107, 97, 97, 0.5);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
@@ -43,10 +43,6 @@
     color: #fff;
     pointer-events: none;
     transition: .5s;
-}
-
-.register-link{
-    background: #3a3d3c;
 }
 
 .login-form-wrapper .form-group input:focus ~ label,
