--- a/src/components/MyRents.css
+++ b/src/components/MyRents.css
@@ -16,14 +16,16 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4CAF50;
+    background-color: #b0b4b0;
     color: white;
   }
 
   .rent-container{
       height: 40em;
       overflow-y: auto;
-      border-style: double;
+      background: rgba(107, 97, 97, 0.5);
+      box-sizing: border-box;
+      box-shadow: 0 15px 25px rgba(0,0,0,.6);
       margin: 5em;
   }
 
@@ -45,9 +47,9 @@
     background-color: #FFF;
     background-image: -webkit-linear-gradient(top,
                           #e4f5fc 0%,
-                          #b9faca 50%,
-                          #51e879 51%,
-                          #4CAF50 100%);
+                          #8ebeda 50%,
+                          #81c5ec 51%,
+                          #4eb5f1 100%);
   }
 
   .image-my-rents{
@@ -55,7 +57,7 @@
   }
 
 .rents-header{
-  background-color: #51e879;
+  background-color: #F5F5F5;
   width: 100%;
   height: 5em;
 }
