--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -5,7 +5,7 @@
     width: 400px;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(0,0,0,.5);
+    background: rgba(107, 97, 97, 0.5);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
@@ -53,9 +53,6 @@
     font-size: 12px;
 }
 
-.login-link{
-    background: #3a3d3c;
-}
 button.btn{
     width: 100%;
     display: inline-block;
