--- a/src/components/UserCard.css
+++ b/src/components/UserCard.css
@@ -1,6 +1,6 @@
 .user-card-container{
     width: 100%;
-    background-color: rgb(149, 163, 159);
+    background: rgba(107, 97, 97, 0.5);
     display: inline-flex;
 }
 
@@ -26,7 +26,7 @@
 /* ---------- */
 
 .dropbtn {
-    background-color: #6a6e6d;
+    background-color: rgba(56, 50, 50, 0.5);
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -42,7 +42,6 @@
     display: none;
     position: absolute;
     background: transparent;
-    /* background-color: #f1f1f1; */
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -58,7 +57,7 @@
   
   .dropdown:hover .dropdown-content {display: block;}
   
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  .dropdown:hover .dropbtn {background-color: #26b9dd;}
 
   .btn{
       width: 30%;
