--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(#7e7f80, #d0d3d6);
+  background: linear-gradient(#2f729e, #f7f7f7);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
